$Id$

			 Commons IO Package
			    Version 1.3
			   Release Notes


INTRODUCTION:

Commons IO is a package of Java utility classes for java.io's hierarchy.  
Classes in this package are considered to be so standard and of such high 
reuse as to justify existence in java.io.

Commons IO contains utility classes, stream implementations, file filters, 
and endian transformation classes.


Compatibility with 1.2
----------------------
Binary compatible - Yes

Source compatible - Yes

Semantic compatible - Yes


Deprecations from 1.2
---------------------
- WildcardFilter deprecated, replaced by WildcardFileFilter
  - old class only accepted files, thus had a confusing dual purpose


Bug fixes from 1.2
------------------
- LineIterator now implements Iterator
  (It was always supposed to...)


Enhancements from 1.2
---------------------
- IOCase
  - New class/enumeration for case-sensitivity control

- FilenameUtils
  - New methods to handle case-sensitivity
  - wildcardMatch - new method that has IOCase as a parameter
  - equals - new method that has IOCase as a parameter

- WildcardFileFilter
  - Replacement for WildcardFilter
  - Accepts both files and directories
  - Ability to control case-sensitivity


Feedback
--------
Open source works best when you give feedback:
http://jakarta.apache.org/commons/io/

Please direct all bug reports to Bugzilla (prefix bug reports by [io])
http://issues.apache.org/bugzilla/buglist.cgi?product=Commons&component=IO

Or subscribe to the commons-user mailing list (prefix emails by [io])
http://jakarta.apache.org/site/mail.html

The Commons-IO Team