@@ -51,6 +51,9 @@ Enhancements from 1.2
   - Accepts both files and directories
   - Ability to control case-sensitivity
 
+- NameFileFilter
+  - Ability to control case-sensitivity
+
 
 Feedback
 --------
